--- a/notes/class.tex
+++ b/notes/class.tex
@@ -48,32 +48,22 @@
 
 \subsection{Por Tamaño}
 \begin{itemize}
-    \item {\paragraph{\textit{Small Data} - Microdatos}
+    \item {\textbf{\textit{Small Data} - Microdatos} : Cantidad de datos pequeños y específicos, generalmente obtenidos en periodos cortos. Útiles para decisiones diarias}
+    \item {\textbf{\textit{Big Data} - Macrodatos} : Cantidad de datos grandes y menos específicos, generalmente obtenidos a través de periodos largos
     \begin{itemize}
-        \item {Específicos}
-        \item {Periodos cortos}
-        \item {Útiles para decisiones diarias}
-    \end{itemize}}
-    \item {\paragraph{\textit{Big Data} - Macrodatos}
-    \begin{itemize}
-        \item {Grandes y menos específicos}
-        \item {Periodos largos}
-        \item {Útiles para decisiones diarias}
-        \item {\paragraph{Desafíos del \textit{Big Data}}
-        \begin{description}
-            \item {Muchas organizaciones se enfrentan a la sobrecarga de muchos datos e información sin importancia o irrelevante}
-            \item {Los datos importantes se pueden ocultar en el fondo con todos los datos no relevantes, lo que hace más difícil encontrarlos y usarlos. Esto puede provocar plazos de toma de decisiones más lentos e ineficientes}
+        \item {\paragraph{Desafíos : }
+        \begin{itemize}
+            \item {Sobrecarga de datos, información sin relevancia o importancia}
+            \item {Datos importantes ocultos por datos no relevantes. Esto puede provocar demoras e ineficiencias en la toma de decisiones}
             \item {Los datos no siempre son fácilmente accesibles}
-            \item {Las herramientas y soluciones tecnológicas actuales todavía luchanb por proporcionar datos medibles que se puedan informar. Esto puede conducir a un sesgo algorítmico injusto}
-            \item {Hay brechas en muchas soluciones empresariales de \textit{Big Data}}
-        \end{description}}
+            \item {Debido al tamaño, no todas las soluciones tecnológicas pueden trabajar con macrodatos. Esto puede llevar a sesgos algorítmicos}
+        \end{itemize}}
         \item {\paragraph{Beneficios}
-        \begin{description}
-            \item {Cuando se pueden almacenar y analizar grandes cantidades de datos, esto puede ayudar a las empresas a identificar formas más eficientes de hacer negocios y ahorrar tiempo y dinero} 
-            \item {Los macrodatos ayudan a las organizaciones a detectar las tendencias de los patrones de compra de los clientes y los niveles de satisfacción, lo cual puede ayudarlas a crear nuevos productos y soluciones que harán felices a los clientes}
-            \item {Al analizar los macrodatos, las empresas obtienen una comprensión mucho mejor de las condiciones actuales del mercado, lo cual puede ayudarlas a mantenerse por delante de la competencia}
-            \item {Ayudan a las empresas a realizar un seguimiento de su presencia en línea, en especial de los comentarios, tanto buenos como malos, de los clientes. Esto les da información que necesitan para mejorar y proteger su marca}
-        \end{description}}
+        \begin{itemize}
+            \item {Al almacenar y analizar grandes cantidades de datos, se pueden identificar formas más eficientes para llevar a cabo negocios y proyectos} 
+            \item {Permiten detectar tendencias y patrones debido al periodo de tiempo en que son generados}
+            \item {Presentan una comprensión más amplia del problema, lo que puede usarse para mantenerse por delante de la competencia}
+        \end{itemize}}
         \item {\paragraph{Cuatro 'V' para resumir Beneficios y Desafíos}
         \begin{description}
             \item[Volumen] : Cantidad de datos
@@ -83,6 +73,7 @@
         \end{description}}
     \end{itemize}}
 \end{itemize}
+
 \begin{table}
     \centering
     \begin{tabular}{|p{7cm}|p{7cm}|}
@@ -92,17 +83,17 @@
         \textbf{\textit{Small Data}} & \textbf{\textit{Big Data}} \\
         \hline
         \begin{description}
-            \item {Describe un conjunto de datos compuesto por métricas específicas durante un periodo de tiempo corto y bien definido}
-            \item {Por lo general se organizan y analizan en hojas de cálculo}
+            \item {Conjunto de datos de métricas específicas, generados durante un periodo de tiempo corto y definido}
+            \item {Generalmente se trabajan en hojas de cálculo}
             \item {Es probable que los utilicen pequeñas y medianas empresas}
-            \item {Fáciles de recopilar, almacenar, administrar, ordenar y representar visualmente}
-            \item {Por lo general ya tienen un tamaño manejable para análisis}
+            \item {Fáciles de recopilar, almacenar, trabajar y representar visualmente}
+            \item {Tamaño manejable para análisis}
         \end{description} & \begin{description}
-            \item {Describe un conjunto de datos más amplio y menos específico que cubre un periodo extenso de tiempo}
-            \item {Por lo general se mantienen en una DB y se consultan}
+            \item {Conjunto de datos más amplio, menos específico, que cubre periodos de tiempo más extensos}
+            \item {Generalmente se mantienen en DB}
             \item {Es probable que lo utilicen grandes organizaciones}
             \item {Requiere mucho esfuerzo para recopilar, almacenar, administrar, clasificar y representar visualmente}
-            \item {Por lo general, deben dividirse en porciones más pequeñas para organizarlos y analizarlos de manera efectiva para tomar decisiones}
+            \item {Se deben dividir en porciones más pequeñas antes de organizar y analizarlos}
         \end{description} \\
         \hline
     \end{tabular}
