--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -85,12 +85,12 @@ Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equi
     \item {\textbf{Equipo Ejecutivo} : Proporciona liderazgo estratégico y operativo a la empresa. Generalmente están muy ocupados, por lo que se trabaja con el jefe/gerente de proyecto. \textit{Ejemplos : Vicepresidentes, Directores de Marketing, Profesionales}}
     \item {\textbf{Equipo Orientado al Cliente} : Cualquier persona en la organización que tenga algún nivel de interacción con clientes, actuales y potenciales}
     \item {\textbf{Equipo Ciencia de Datos} : 
-    \begin{description}
-        \item [Analista de Datos]{: Recolección, transformación y organización de datos, con tal de realizar conclusiones, predicciones y decisiones basadas en hechos}
-        \item [Ingeniero de Datos]{ : Procesamiento de datos iniciales para crear un proceso viable, al darles un formato útil para el análisis. Generalmente es el encargado de prepararlos para los analistas y científicos}
-        \item [Científico de Datos]{ : Creación de modelos y exploración de lo desconocido usando datos sin editar, para encontrar preguntas y problemas nuevos}
-        \item [Especialistas de Depósitos de Datos]{ : Desarrollo de procesos y procedimientos para guardar y organizar datos de forma efectiva}
-    \end{description}}
+    \begin{itemize}
+        \item {\textbf{Analista de Datos} : Recolección, transformación y organización de datos, con tal de realizar conclusiones, predicciones y decisiones basadas en hechos}
+        \item {\textbf{Ingeniero de Datos} : Procesamiento de datos iniciales para crear un proceso viable, al darles un formato útil para el análisis. Generalmente es el encargado de prepararlos para los analistas y científicos}
+        \item {\textbf{Científico de Datos} : Creación de modelos y exploración de lo desconocido usando datos sin editar, para encontrar preguntas y problemas nuevos}
+        \item {\textbf{Especialistas de Depósitos de Datos} : Desarrollo de procesos y procedimientos para guardar y organizar datos de forma efectiva}
+    \end{itemize}}
 \end{itemize}
 
 \newpage
