--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -176,10 +176,10 @@
     description = {\textit{Registro de cambios}. Archivo que contiene la lista de modificaciones hecha a un proyecto, en orden cronológico}
 }
 
-\newglossaryentry{objemp}{
-    name = Objetivo Empresarial,
-    sort = {objetivo},
-    description = {Resultado u objetivos que la empresa busca alcanzar, que considera exitoso. \textit{También llamado Desafío Empresarial}}
+\newglossaryentry{probemp}{
+    name = Problema Empresarial,
+    sort = {problema},
+    description = {Resultado u objetivos que la empresa busca alcanzar, que considera exitoso. \textit{También llamado Desafío/Objetivo Empresarial, Estrategia de Negocios}}
 }
 
 \newglossaryentry{habbland}{
