--- a/notes/main.tex
+++ b/notes/main.tex
@@ -71,6 +71,7 @@
 \input{ask}
 \input{prepare}
 \input{process}
+\input{analyze}
 \input{fases_add}
 \input{otros_f_add}
 %\input{example} Ejemplo, se puede borrar
