--- a/notes/prepare.tex
+++ b/notes/prepare.tex
@@ -1,5 +1,5 @@
 \section{\textit{Prepare} - Preparar}
-Una vez se define el \gls{objemp}, se \textbf{planifican} los datos para resolverlo. Se determinan \textbf{métricas, formatos y estructuras}, junto a \textbf{medidas de seguridad} como protección, administración y acceso. También se toman medidas contra \textbf{sesgos estadísticos}
+Una vez se define el \gls{probemp}, se \textbf{planifican} los datos para resolverlo. Se determinan \textbf{métricas, formatos y estructuras}, junto a \textbf{medidas de seguridad} como protección, administración y acceso. También se toman medidas contra \textbf{sesgos estadísticos}
 
 \paragraph{Beneficios de Modificar Formatos y Estructuras}
 \begin{itemize}
@@ -9,12 +9,6 @@ Una vez se define el \gls{objemp}, se \textbf{planifican} los datos para resolve
     \item {\textbf{Fusión} : unión de datos en una misma organización}
     \item {\textbf{Mejora} : los datos pueden mostrarse en campos más detallados}
     \item {\textbf{Comparación} : entre datos o sets}
-\end{itemize}
-
-\subsection{Ordenar vs. Filtrar}
-\begin{itemize}
-    \item {\textbf{Ordenado} : Búsqueda de orden significativo para facilitar el entender, analizar y visualizar datos}
-    \item {\textbf{Filtrar} : Ocultar datos que no cumplan con criterios definidos, para destacar los que si lo hacen}
 \end{itemize}
 
 \subsection{Organización de Datos}
