--- a/notes/spreadsheet.tex
+++ b/notes/spreadsheet.tex
@@ -4,14 +4,28 @@
 Las hojas de cálculo se utilizan generalmente para conjuntos de datos pequeños, donde los valores se ingresan de forma manual. Brindan funciones incorporadas como creaciones de gráficos y visualizaciones, corrección ortográfica incorporada, entre otras. Pueden conectarse con otras hojas, tablas HTML y archivos \gls{csv}.
 
 \paragraph{Herramientas Comunes}
-Toda fórmula se comienza escribiendo '='. Al hacerlo, se despliega un menú que incluye fórmulas, nombres y \gls{str}. Se incluyen ejemplos de \gls{syntx} para \textcolor{blue}{fórmulas} y \textcolor{ForestGreen}{funciones}
+Toda fórmula se comienza escribiendo '='. Al hacerlo, se despliega un menú que incluye fórmulas, nombres y \gls{str}. Se incluyen ejemplos de \gls{syntx} para \textcolor{blue}{fórmulas} y \textcolor{ForestGreen}{funciones}. Después de aplicar una fórmula, se recomienda copiar y pegar la información generada para convertirla en datos estáticos
 \begin{itemize}
-    \item {\textbf{Formateo Condicional} : Cambia la estética de las celdas cuando sus valores cumplen con condiciones especificadas}
     \item {\textbf{Llenado Automático} : Presente como un cuadrado en la esquina inferior derecha de la celda, se arrastra y llena celdas vacías con el contenido y referencias de la celda inicial}
     \item {\textbf{Remover Duplicados} : Busca y elimina automáticamente aquellas entradas que podrían estar duplicadas} 
     \item {\textbf{Buscar y Reemplazar} : Herramienta que busca por un término específico y lo reemplaza por otro determinado}
+    \item {\textbf{Ordenar por Hoja} : Ordena todos los datos de la hoja de acuerdo al ranking de una columna en específico. \textbf{Los datos a través de un registro se mantienen juntos}}
+    \item {\textbf{Ordenar por Rango} : Ordena solamente las celdas especificadas en una columna. El resto de la hoja se desordena}
+    \item {\textbf{Formateo Condicional} : Cambia la estética de las celdas cuando sus valores cumplen con condiciones especificadas
+        \begin{itemize}
+            \item {Seleccionar "formato condicional" en el menú "formato" > elegir el rango, reglas y estilo de formato}
+            \item {Es posible utilizar más de una regla a la vez}
+            \item {Se puede combinar Formateo Condicional con Validación de Datos}
+        \end{itemize}}
+    \item {\textbf{Validación de Datos} : 
+    \begin{itemize}
+        \item {Asigna un menú desplegable a una columna entera. \textit{Seleccionar columna > 'data' > 'validación de datos' > crear criterios (si es una lista de criterios, separar por coma)}}
+        \item {Crear casillas de verificación}
+        \item {Crear lista de valores fijos para seleccionar}
+        
+    \end{itemize}} 
     \item {\textcolor{ForestGreen}{\textbf{SPLIT}} : Función que divide el texto en base a un caracter, y guarda cada fragmento en una celda nueva. El caracter es un \textbf{delimitador} y puede ser un espacio, coma, guiones, entre otros}
-    \item {\textcolor{ForestGreen}{\textbf{=CONCATENATE(item1,item2...)}} : Función que une múltiples \gls{str} en uno solo. \textit{ej =CONCATENATE("text",'' '',"string") devuelve "text string"}}
+    \item {\textcolor{ForestGreen}{\textbf{=CONCATENATE(item1,item2...)}} : Función que une múltiples \gls{str} en uno solo. \textit{ej =CONCATENATE("text",'' '',"string") devuelve "text string"}. Para dos valores, CONCAT es suficiente}
     \item {\textcolor{ForestGreen}{\textbf{=COUNTIF(rango,"valor\_comillas")}} : Cuenta el número de celdas, dentro de un rango determinado que cumplen con una condición. \textit{ej =COUNTIF(A2:A30,'${\geq}$10') devuelve la cantidad de valores que son iguales o mayores a 10}}
     \item {\textcolor{ForestGreen}{\textbf{=LEN(rango)}} : Cuenta el número de caracteres que contiene un \gls{str} dado. \textit{ej =LEN(A21) devuelve el largo del string en la celda A21}}
     \item {\textcolor{ForestGreen}{\textbf{=LEFT}} \& \textcolor{ForestGreen}{\textbf{=RIGHT}}: Extrae un conjunto de caracteres a la izquierda o derecha de un \gls{str} determinado}
@@ -22,7 +36,8 @@ Toda fórmula se comienza escribiendo '='. Al hacerlo, se despliega un menú que
     \item {\textcolor{ForestGreen}{\textbf{=IMPORTRANGE(sheet\_url,range\_str)}} : Importa datos desde una hoja de cálculo a otra, con actualización automática ante cualquier cambio}
     \item {\textcolor{ForestGreen}{\textbf{=QUERY(sheet+range,"SQL CLAUSE")}} : Pseudo instrucción SQL, puede funcionar como asistente para importación de datos}
     \item {\textcolor{ForestGreen}{\textbf{=FILTER(range,cond1,cond2...)}} : Muestra datos que cumplen con una o más condiciones en un rango específico. \textit{A diferencia de \textcolor{ForestGreen}{QUERY}}, no puede combinarse con otras funciones en pos de cálculos más complejos}
-    
+    \item {\textcolor{ForestGreen}{\textbf{=SORT(rango, col*,TRUE/FALSE)}} : Ordena el rango definido utilizando una columna de referencia en modo numérico (1 para A, 2 para B...) en orden ascendente (TRUE) o descendente (FALSE). \textbf{A diferencia de las opciones Ordenar por Hoja y Ordenar por Rango, esto si modifica el set de datos completo}}
+    \item {\textcolor{ForestGreen}{\textbf{=CONVERT(celda,'formato\_inicial','formato\_final')}} : Cambia el formato de una celda. \textit{Revisar los formatos de cambio para excel o sheets}}
 \end{itemize}
 
 \begin{description}
