--- a/notes/analyze.tex
+++ b/notes/analyze.tex
@@ -3,31 +3,23 @@
 \section{\textit{Analyze} - Analizar}
 Una vez \textbf{organizados, agregados, formateados y ajustados} los datos, es posible realizar el proceso de \textbf{análisis} en si. La meta es identificar tendencias y relaciones entre datos, que puedan resolver el \gls{probemp}
 
-\begin{itemize}
-    \item {Exploración de los datos ya preparados :
-    \begin{itemize}
-        \item {Formatear, transformar, ordenar y filtrar datos}
-        \item {Combinar datos de varias fuentes, teniendo en mente su perspectiva o \gls{cntxt} : 
-        \begin{description}
-            \item[Quién]{ : Creó, recopiló, financió la recopilación de datos}
-            \item[Qué]{ : Circunstancias que generan impacto en cualquier parte del mundo}
-            \item[Dónde]{ : Origen de los datos}
-            \item[Cuándo]{ : Momento de creación o recopilación} 
-            \item[Cómo]{ : Método con el que se creó o recopiló} 
-        \end{description}}
-    \end{itemize}}
-    \item {\textbf{Preguntas Efectivas:}
-    \begin{itemize}
-        \item {Qué historia me cuentan los datos?}
-        \item {Como ayudan estos datos a resolver el problema?}
-        \item {Quién necesita el producto o servicio, qué tipo de cliente es más probable que lo use?}
-    \end{itemize}}
-\end{itemize}
+Al momento de combinar fuentes, se debe considerar el \gls{cntxt} : \textbf{quién} los creó, recopiló o financió, \textbf{dónde} se originan, \textbf{cuándo} se crearon o recopilaron, y \textbf{cómo} lo hicieron
 
 \subsection{Formateo y Ajuste de Datos}
 Los \textbf{Datos Atípicos} son puntos de datos que difieren mucho de aquellos que se recogieron de forma similar, y podrían no ser fiables o inducir a errores. Lo más probable es que se trabaje con datos que necesiten correcciones para ser considerados útiles. 
-
 \begin{itemize}
     \item {\textbf{Ordenación} : Organización de datos en un orden significativo, para que sea más fácil entenderlos} 
     \item {\textbf{Filtrado} : Proceso para ocultar datos que no cumplen con criterios definidos previamente, para destacar los que si lo hacen}
 \end{itemize}
+
+\subsection{\textit{Data Aggregation} - Agregación de Datos}
+En el contexto de análisis, la agregación de datos consiste en el proceso de recolección de datos, utilizando múltiples fuentes, para combinarlo todo en un solo grupo. A través de esto se logra 
+\begin{itemize}
+    \item {Identificar Tendencias}
+    \item {Realizar comparaciones}
+    \item {Obtener información}
+    \item {Cuando se mide a través de un periodo de tiempo, se pueden obtener estadísticas como \textbf{promedios, mínimos, máximos y sumas}}
+\end{itemize}
+
+
+\newpage
